[project]
name = "api-explorer"
version = "0.1.0"
description = "Lightweight API testing tool."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
]

[project.scripts]
api-cli = "api_cli:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["api_cli", "api_client"]
